@@ -24,6 +24,8 @@ config BR2_cris
 	bool "cris"
 config BR2_i386
 	bool "i386"
+config BR2_m32c
+	bool "r8c/m16c/m32c/"
 config BR2_m68k
 	bool "m68k"
 config BR2_m68hc11
@@ -184,6 +186,7 @@ config BR2_ARCH
 	default "i486"		if BR2_x86_i486
 	default "i586"		if BR2_x86_i586
 	default "i686"		if BR2_x86_i686
+	default "m32c"		if BR2_m32c
 	default "m68k"		if BR2_m68k
 	default "m68hc11"	if BR2_m68hc11
 	default "m68hc12"	if BR2_m68hc12
@@ -205,7 +208,7 @@ config BR2_ARCH
 
 config BR2_ENDIAN
 	string
-	default "LITTLE" if BR2_arm || BR2_cris || BR2_i386 || BR2_mipsel || \
+	default "LITTLE" if BR2_arm || BR2_cris || BR2_i386 || BR2_m32c || BR2_mipsel || \
 	                    BR2_sh3 || BR2_sh4 || BR2_x86_64 || BR2_nios2 || \
 			    BR2_sh64 || BR2_h8300
 	default "BIG"    if BR2_alpha || BR2_armeb || BR2_avr32 || BR2_m68k || \
