@@ -9,68 +9,69 @@ choice
 	help
 	  Select the version of gcc you wish to use.
 
-	config BR2_GCC_VERSION_3_3_5
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 3.3.5"
+#	config BR2_GCC_VERSION_3_3_5
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 3.3.5"
 
-	config BR2_GCC_VERSION_3_3_6
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 3.3.6"
+#	config BR2_GCC_VERSION_3_3_6
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 3.3.6"
 
-	config BR2_GCC_VERSION_3_4_2
-		depends BR2_DEPRECATED
-		bool "gcc 3.4.2"
+#	config BR2_GCC_VERSION_3_4_2
+#		depends BR2_DEPRECATED
+#		bool "gcc 3.4.2"
 
-	config BR2_GCC_VERSION_3_4_3
-		depends BR2_DEPRECATED
-		bool "gcc 3.4.3"
+#	config BR2_GCC_VERSION_3_4_3
+#		depends BR2_DEPRECATED
+#		bool "gcc 3.4.3"
 
-	config BR2_GCC_VERSION_3_4_4
-		depends BR2_DEPRECATED
-		bool "gcc 3.4.4"
+#	config BR2_GCC_VERSION_3_4_4
+#		depends BR2_DEPRECATED
+#		bool "gcc 3.4.4"
 
-	config BR2_GCC_VERSION_3_4_5
-		depends BR2_DEPRECATED
-		bool "gcc 3.4.5"
+#	config BR2_GCC_VERSION_3_4_5
+#		depends BR2_DEPRECATED
+#		bool "gcc 3.4.5"
 
 	config BR2_GCC_VERSION_3_4_6
+		depends on !BR2_m32c
 		bool "gcc 3.4.6"
 
-	config BR2_GCC_VERSION_4_0_0
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.0.0"
+#	config BR2_GCC_VERSION_4_0_0
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.0.0"
 
-	config BR2_GCC_VERSION_4_0_1
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.0.1"
+#	config BR2_GCC_VERSION_4_0_1
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.0.1"
 
-	config BR2_GCC_VERSION_4_0_2
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.0.2"
+#	config BR2_GCC_VERSION_4_0_2
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.0.2"
 
-	config BR2_GCC_VERSION_4_0_3
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.0.3"
+#	config BR2_GCC_VERSION_4_0_3
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.0.3"
 
-	config BR2_GCC_VERSION_4_0_4
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.0.4"
+#	config BR2_GCC_VERSION_4_0_4
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.0.4"
 
-	config BR2_GCC_VERSION_4_1_0
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.1.0"
+#	config BR2_GCC_VERSION_4_1_0
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.1.0"
 
-	config BR2_GCC_VERSION_4_1_1
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.1.1"
+#	config BR2_GCC_VERSION_4_1_1
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.1.1"
 
-	config BR2_GCC_VERSION_4_1_2
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.1.2"
+#	config BR2_GCC_VERSION_4_1_2
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.1.2"
 
-	config BR2_GCC_VERSION_4_2
-		depends !BR2_nios2 && BR2_DEPRECATED
-		bool "gcc 4.2"
+#	config BR2_GCC_VERSION_4_2
+#		depends !BR2_nios2 && BR2_DEPRECATED
+#		bool "gcc 4.2"
 
 	config BR2_GCC_VERSION_4_2_4
 		depends on !BR2_avr32 && !BR2_nios2
@@ -85,22 +86,22 @@ config BR2_GCC_SUPPORTS_SYSROOT
 
 config BR2_GCC_VERSION
 	string
-	default "3.3.5"     if BR2_GCC_VERSION_3_3_5
-	default "3.3.6"     if BR2_GCC_VERSION_3_3_6
-	default "3.4.2"     if BR2_GCC_VERSION_3_4_2
-	default "3.4.3"     if BR2_GCC_VERSION_3_4_3
-	default "3.4.4"     if BR2_GCC_VERSION_3_4_4
-	default "3.4.5"     if BR2_GCC_VERSION_3_4_5
+#	default "3.3.5"     if BR2_GCC_VERSION_3_3_5
+#	default "3.3.6"     if BR2_GCC_VERSION_3_3_6
+#	default "3.4.2"     if BR2_GCC_VERSION_3_4_2
+#	default "3.4.3"     if BR2_GCC_VERSION_3_4_3
+#	default "3.4.4"     if BR2_GCC_VERSION_3_4_4
+#	default "3.4.5"     if BR2_GCC_VERSION_3_4_5
 	default "3.4.6"     if BR2_GCC_VERSION_3_4_6
-	default "4.0.0"     if BR2_GCC_VERSION_4_0_0
-	default "4.0.1"     if BR2_GCC_VERSION_4_0_1
-	default "4.0.2"     if BR2_GCC_VERSION_4_0_2
-	default "4.0.3"     if BR2_GCC_VERSION_4_0_3
-	default "4.0.4"     if BR2_GCC_VERSION_4_0_4
-	default "4.1.0"     if BR2_GCC_VERSION_4_1_0
-	default "4.1.1"     if BR2_GCC_VERSION_4_1_1
-	default "4.1.2"     if BR2_GCC_VERSION_4_1_2
-	default "4.2"       if BR2_GCC_VERSION_4_2
+#	default "4.0.0"     if BR2_GCC_VERSION_4_0_0
+#	default "4.0.1"     if BR2_GCC_VERSION_4_0_1
+#	default "4.0.2"     if BR2_GCC_VERSION_4_0_2
+#	default "4.0.3"     if BR2_GCC_VERSION_4_0_3
+#	default "4.0.4"     if BR2_GCC_VERSION_4_0_4
+#	default "4.1.0"     if BR2_GCC_VERSION_4_1_0
+#	default "4.1.1"     if BR2_GCC_VERSION_4_1_1
+#	default "4.1.2"     if BR2_GCC_VERSION_4_1_2
+#	default "4.2"       if BR2_GCC_VERSION_4_2
 	default "4.2.4"     if BR2_GCC_VERSION_4_2_4
 
 #config BR2_TOOLCHAIN_SYSROOT
