@@ -14,4 +14,6 @@ buildroot-0.1.3 2008-xx-xx <spudmonkey@racsa.co.cr>
 
 	* Add support for H8/300 toolchain
 	* Add support for GCC 4.2.4 and binutils 2.19
-	* New ARM configuration using  GCC 4.2.4 and binutils 2.19
+	* Various fixes for newer Linux environments
+	* New ARM configuration using GCC 4.2.4 and binutils 2.19
+	* Add Renesas R8C/M16C/M32C configuration using GCC 4.2.4 and binutils 2.19
